added style file

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Website Project to Learn Git and Github</h1>
+    <div>
+        <h1>Website Project to Learn Git and Github</h1>
+    </div>
+    
 </body>
 </html>
